# OpenCV-ReadWriteImage

./: CMakeLists.txt  README.md
src/: main.cpp
